refactor: Replace Collectors.toList() with toList() for improved readability